--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<title>Vacation</title>
 </head>
 <body>
@@ -19,8 +19,8 @@
 
 </p>
 <div class="center-image">
-<img src="beach.jpeg">
-<img src="water.jpg">
+<img src="img/beach.jpeg">
+<img src="img/water.jpg">
 </div>
 </body>
 </html>
